k8s-manifests/contig-alias/overlays/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: contig-alias-stage
  labels:
    environment: staging
